--- a/style.css
+++ b/style.css
@@ -17,6 +17,19 @@ body{
     font-weight: bold;
 }
 
+p{
+    font-size: 14px;
+}
+
+h2{
+    font-weight: bold;
+    font-size: 23px;
+    margin-bottom: 20px;
+}
+
+a.font-black{
+    color: #000!important;
+}
 /**********
 
 ABOUT
@@ -67,4 +80,27 @@ ABOUT
 
 #about .icons a {
     color: #000;
+}
+
+/***************
+
+PROJECTS
+
+****************/
+
+#projects {
+    margin: 60px auto;
+    width: 80%;
+}
+
+#projects h2{
+    text-align: center;
+}
+
+#projects .card img {
+    width: 100%;
+}
+
+#projects .card-title {
+    font-weight: bold;
 }
