--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ body{
 }
 
 .font-primary{
-    color:#00abae;
+    color:#8d3ada;
 }
 
 .title-icon{
     font-size: 20px;
     font-weight: bold;
+    color: #000;
 }
 
 p{
@@ -30,6 +31,8 @@ h2{
 a.font-black{
     color: #000!important;
 }
+
+
 /**********
 
 ABOUT
